# Snap7ClientC

./: .gitignore  CMakeLists.txt  README.md  main.c
snap7-full-1.4.2/src/core/: s7_isotcp.c  s7_isotcp.h  s7_micro_client.c  s7_micro_client.h  s7_peer.c  s7_peer.h  s7_text.c  s7_text.h  s7_types.h
snap7-full-1.4.2/src/sys/: snap_msgsock.c  snap_msgsock.h  snap_platform.h  snap_sysutils.c  snap_sysutils.h  snap_threads.c  win_threads.h
